# Data-Science-Graduate-Projects

./: .gitignore  README.md  pyproject.toml
1. Spotify Song Analysis/: README.md
1. Spotify Song Analysis/data/: Full Spotify Data.xlsx  ~$Full Spotify Data.xlsx
2. NYC Air Quality Data Analysis/: README.md
2. NYC Air Quality Data Analysis/Code/: air_quality_analysis_(chashi_vijay).ipynb
3. Data Preprocessing: Titanic Dataset/: README.md
3. Data Preprocessing: Titanic Dataset/Code/: data_preprocessing_titanic_dataset.ipynb
4. Cryptic Species Classification: SVM/: README.md
4. Cryptic Species Classification: SVM/Code/: project_svm_chashi_renata_manikanta.ipynb
5. Webscrapping: Funding Offer/: README.md
5. Webscrapping: Funding Offer/Code/: names_area.py  plots.py  project5_chashi_vijay.ipynb  querying_homepage.py  uni_divs.py  web scraping.ipynb
5. Webscrapping: Funding Offer/Data/: all_faculty_info.csv  cs_rank.csv  final_output.csv  final_output_new.csv  funding_info.csv  funding_info2.csv  funding_info_2.csv  output.csv  three_uni.csv  uni_infos.csv
6. Comparison between LMs' summaries/: README.md
6. Comparison between LMs' summaries/Code/: BERT.ipynb  Data_video.ipynb  GPT2.ipynb  InspectingtheData_modelparameters.ipynb  T5.ipynb  gpt2_data_video.ipynb  gpt2_training.ipynb
6. Comparison between LMs' summaries/Data/: balanced_mortality.xlsx
